@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-src/ACKNOWLEDGMENTS,v 1.45 2006/04/04 09:09:45 ph10 Exp $
+$Cambridge: exim/exim-src/ACKNOWLEDGMENTS,v 1.46 2006/06/07 15:06:26 fanf2 Exp $
 
 EXIM ACKNOWLEDGEMENTS
 
@@ -77,6 +77,7 @@ Matt Bernstein            LMTP over socket
 Mike Bethune              Help with debugging an elusive ALRM signal bug
 Ard Biesheuvel            Lookup code for accessing an Interbase database
 Richard Birkett           Fix for empty -f address crash
+Dean Brooks               Fix for ratelimit per_rcpt in acl_not_smtp.
 Nick Burrett              Patch for CONFIGURE_FILE_USE_EUID in exicyclog
 Matthew Byng-Maddick      Patch for qualify_domain in redirect router
                           Patch for ignore_target_hosts in ipliteral router
